# telegram-file-manager-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  common.py  main.py
app/db/: __init__.py  db.py  db_interaction.py  models.py  schema.py
app/db/db_interaction/: check.py  create.py  delete.py  get.py  update.py
app/filters/: allowed_callback_query.py  allowed_groups.py  allowed_inline_queries.py  allowed_users.py
app/keyboards/: inline_kb.py  reply_kb.py
app/routers/: __init__.py  add_file_router.py  add_folder_router.py  admin_router.py  callback_router.py  callback_router_old.py  external_router.py  group_router.py  inline_router.py  inline_router_old.py  move_router.py  private_router.py  remove_folder_router.py  rename_folder_router.py
test/: .env.test  conftest.py
test/integration/: test_file_adding.py  test_file_existing_checking.py  test_file_getting.py  test_file_moving.py  test_folder_adding.py  test_folder_deleting.py  test_folder_renaming.py  test_link_deleting.py  test_proper_start.py
