[project]
name = "telegram-file-manager-bot"
version = "0.1.0"
description = "A Telegram bot that transforms your chats into an organized file management system with hierarchical folders and inline mode availability."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.22.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "dotenv==0.9.9",
    "frozenlist==1.8.0",
    "greenlet==3.2.4",
    "idna==3.11",
    "magic-filter==1.0.12",
    "multidict==6.7.0",
    "propcache==0.4.1",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "yarl==1.22.0",
]
